--- a/.github/workflows/dzil-matrix.yaml
+++ b/.github/workflows/dzil-matrix.yaml
@@ -10,11 +10,11 @@ jobs:
     steps:
     - name: Build archive
       id: build-archive
-      uses: rjbs/dzil-actions/build@main
+      uses: rjbs/dzil-actions/build@v0
 
   multiperl-test:
     needs: build-tarball
-    uses: rjbs/dzil-actions/.github/workflows/multiperl-test-matrix.yaml@main
+    uses: rjbs/dzil-actions/.github/workflows/multiperl-test-matrix.yaml@v0
     with:
       perl-versions-json: ${{ needs.build-tarball.outputs.perl-versions }}
 
