--- a/test-tarball/action.yaml
+++ b/test-tarball/action.yaml
@@ -40,7 +40,7 @@ runs:
     working-directory: ./${{ inputs.dist-name }}
     shell: bash
     run: |
-      JUNIT_TEST_FILE="/tmp/test-output.xml" ALLOW_PASSING_TODOS=1 yath test --renderer=Formatter --renderer=JUnit -D
+      JUNIT_TEST_FILE="/tmp/test-output.xml" ALLOW_PASSING_TODOS=1 TEST2_UUID_NO_WARN=1 yath test --renderer=Formatter --renderer=JUnit -D
   - name: Publish test report
     uses: mikepenz/action-junit-report@v4
     if: always() # always run even if the previous step fails
