multiperl-test-matrix: run container with init

--- a/.github/workflows/multiperl-test-matrix.yaml
+++ b/.github/workflows/multiperl-test-matrix.yaml
@@ -20,6 +20,7 @@ jobs:
 
     container:
       image: perldocker/perl-tester:${{ matrix.perl-version }}
+      options: --init
 
     steps:
       - name: Test distribution
